<resources>
    <string name="app_name">testing android java</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first_to_second">First To Second</string>
    <string name="second_to_third">Second To Third</string>
    <string name="third_to_fourth">Third To Fourth</string>
    <string name="fourth_to_fifth">Fourth To Fifth</string>
    <string name="fifth_to_sixth">Fifth To Sixth</string>
    <string name="sixth_to_seventh">Sixth To Seventh</string>
    <string name="seventh_to_eight">Seventh To Eighth</string>
    <string name="eight_to_nineth">Eighth To Nineth</string>
    <string name="nineth_to_tenth">Nineth To Tenth</string>
    <string name="tenth_to_eleventh">Tenth To Eleventh</string>
    <string name="eleventh_to_twelfth">Eleventh To Twelfth</string>
    <string name="twelfth_to_thirteen">Twelfth To Thirteen</string>
    <string name="thirteen_to_fourteen">Twelfth To fourteen</string>
    <string name="fourteen_to_fifteen">fourteen To fifteen</string>
    <string name="fifteen_to_sixteen">fifteen To Sixteen</string>
    <string name="sixteen_to_seventeen">Sixteen To Seventeen</string>
    <string name="seventeen_to_eighteen">Seventeen To Eighteen</string>
    <string name="eighteen_to_nineteen">Eighteen To Nineteen</string>
    <string name="nineteen_to_twenty">Nineteen To twenty</string>
    <string name="twenty_to_twenty_one">twenty To twenty-one</string>
    <string name="twenty_one_to_twenty_two">twenty-one To twenty-two</string>
    <string name="twenty_two_to_first">twenty-one To First</string>

    <string name="request_http">Request HTTP</string>
    <string name="generate_qrcode">Generate QR Code</string>
    <string name="scan_ble">Scan Ble</string>
    <string name="byte_to_hex">byte to hex</string>
    <string name="random">random</string>
    <string name="utc">utc: dd/mm/yyyy hh:mm:ss</string>
    <string name="local">local: dd/mm/yyyy hh:mm:ss</string>
    <string name="now">now: dd/mm/yyyy hh:mm:ss</string>
    <string name="convert">convert</string>
    <string name="direct_call">direct call</string>
    <string name="dial">Dial Number</string>
    <string name="dialog_list">Dialog List</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="hello_fourth_fragment">Hello fourth fragment</string>
    <string name="hello_fifth_fragment">Hello fifth fragment</string>
    <string name="hello_sixth_fragment">Hello sixth fragment</string>
    <string name="hello_seventh_fragment">Hello seventh fragment</string>
    <string name="hello_eight_fragment">Hello eight fragment</string>
    <string name="hello_nineth_fragment">Hello nineth fragment</string>
    <string name="hello_tenth_fragment">Hello tenth fragment</string>
    <string name="hello_elevent_fragment">Hello eleventh fragment</string>
    <string name="hello_twelfth_fragment">Hello twelve fragment</string>
    <string name="hello_thirteen_fragment">Hello thirteen fragment</string>
    <string name="hello_fourteen_fragment">Hello fourteen fragment</string>
    <string name="hello_fifteen_fragment">Hello fifteen fragment</string>
    <string name="hello_sixteen_fragment">Hello sixteen fragment</string>
    <string name="hello_seventeen_fragment">Hello seventeen fragment</string>
    <string name="hello_eighteen_fragment">Hello eighteen fragment</string>
    <string name="hello_nineteen_fragment">Hello nineteen fragment</string>

    <string name="storage">Storage</string>
    <string name="camera">Camera</string>
    <string name="title">Title</string>
    <string name="data">Data</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="wifi_scanner">Wifi Scanner</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="send">Send</string>
    <string name="get">Get</string>
    <string name="testing_try">TTT</string>

    <string-array name="numbers">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>