<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.StringEncodeImageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty_two_to_first" />

        <Button
            android:id="@+id/capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

        <Button
            android:id="@+id/buttonEncode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encrypt" />

        <Button
            android:id="@+id/buttonDecode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrypt" />

        <Button
            android:id="@+id/buttonShown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <ImageView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/encrypt"
            android:src="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/decrypt"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/encodeString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random" />
    </LinearLayout>
</ScrollView>